# avr-freertos

./: .gitignore  CMakeLists.txt  README.md
cmake/: README.md  utilities.cmake
cmake/boards/microchip/curiosity_pic32mzef/: driver.cmake  lib.cmake  projects.cmake
cmake/boards/microchip/curiosity_pic32mzef/toolchains/: xc32.cmake
cmake/boards/nxp/lpc54018iotmodule/: demos.cmake  driver.cmake  tests.cmake
cmake/boards/nxp/lpc54018iotmodule/toolchains/: arm-iar.cmake
cmake/boards/pc/windows/: lib.cmake  override.cmake  projects.cmake  tests.cmake
cmake/boards/pc/windows/toolchains/: gcc.cmake  msvc.cmake
cmake/boards/st/stm32l475_discovery/: demos.cmake  driver.cmake  override.cmake  projects.cmake  tests.cmake
cmake/boards/st/stm32l475_discovery/toolchains/: arm-gcc.cmake
cmake/boards/ti/cc3220_launchpad/: driver.cmake  lib.cmake  override.cmake  projects.cmake  tests.cmake
cmake/boards/ti/cc3220_launchpad/toolchains/: arm-ti.cmake
cmake/toolchains/: arm-gcc.cmake  arm-iar.cmake  arm-ti.cmake  xc32.cmake
demos/: CMakeLists.txt
demos/Common/Minimal/: AbortDelay.c  EventGroupsDemo.c  GenQTest.c  MessageBufferAMP.c  MessageBufferDemo.c  QueueSet.c  StaticAllocation.c  StreamBufferDemo.c  StreamBufferInterrupt.c  TimerDemo.c
demos/Common/include/: MessageBufferAMP.h  MessageBufferDemo.h
lib/: CMakeLists.txt
lib/FreeRTOS/: CMakeLists.txt
lib/FreeRTOS-Plus-POSIX/: CMakeLists.txt
lib/FreeRTOS-Plus-TCP/: CMakeLists.txt
lib/bufferpool/: CMakeLists.txt
lib/crypto/: CMakeLists.txt
lib/greengrass/: CMakeLists.txt
lib/mqtt/: CMakeLists.txt
lib/ota/: CMakeLists.txt
lib/ota/portable/espressif/esp32_devkitc_esp_wrover_kit/: aws_ota_pal.c
lib/ota/portable/microchip/curiosity_pic32mzef/: aws_ota_pal.c
lib/pkcs11/: CMakeLists.txt
lib/secure_sockets/: CMakeLists.txt
lib/shadow/: CMakeLists.txt
lib/tls/: CMakeLists.txt
lib/utils/: CMakeLists.txt
lib/wifi/: CMakeLists.txt
tests/: CMakeLists.txt
